# Comp_grafic

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aggregate_primitive.hpp  app.cpp  app.hpp  background.hpp  blinnphong_integrator.hpp  blinnphong_material.hpp  camera.hpp  cmake_install.cmake  compile_commands.json  film.hpp  flat_material.hpp  geometric_primitive.hpp  geometry_spheres.xml  integrator.hpp  lodepng.cpp  main.cpp  material.hpp  math.cpp  math.hpp  orthographic.xml  orthographic_camera.hpp  param_set.hpp  parcial_perspective.xml  parcial_sphere.xml  parser.cpp  parser.hpp  perspective.xml  perspective_camera.hpp  prim_list.hpp  primitive.hpp  ray.hpp  raycast_integrator.hpp  scene.hpp  scene00.xml  scene01.xml  (+10 more)
